package baitap.ce1;

public abstract class Collection {
    abstract Iterator createIterator();
}
