package baitap.ce1;

public interface Iterator {
    Object frist();
    Object next();
    Object current();
    boolean isDone();
}
