@startuml
'https://plantuml.com/class-diagram

abstract class Collection{
    {abstract} Iterator createIterator(Collection c)
}
abstract Iterator {
    Frist(): object
    Next(): object
    hasNext(): boolean
    CurentItem(): object
}
class ArrayInterator
class ArrayCollection {
   - int[] arr
   + getItem(int i)
   + int count()
}
Collection<|---ArrayCollection
Iterator<|..ArrayInterator
ArrayInterator-->ArrayCollection:collection

@enduml